syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/Empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "transaction_status_payload.proto";

package transaction_status.service.v1;
option go_package = "./pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Template GRPC Service";
        version: "1.0";
    };
    security_definitions: {
        security: {
            key: "bearer"
            value: {
                type: TYPE_API_KEY
                in: IN_HEADER
                name: "Authorization"
                description: "Authentication token, prefixed by Bearer: Bearer <token>"
            }
        }
    }
    security: {
        security_requirement: {
            key: "bearer"
        }
    }
};

service TransactionStatusService {

    // #region Utility
    
    rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse) {
        option (google.api.http) = {
            get: "/api/template/health"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            security: {} // Disable security key
            tags: ["Utility"]
            summary: "Health Check"
            description: "This API for check server's health"
        };
    };

    // #endregion

    // "this is for register job for queue to rabbit
    rpc RegisterJobTransactionPending(RegisterJobTransactionPendingeRequest) returns (RegisterJobTransactionPendingResponse) {
        option (google.api.http) = {
            post: "/api/transaction-status"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags: ["transaction-status"]
            summary: "register transaction pending"
            description: "this is for register job for queue to rabbit"
        };
    };

    rpc UpdatedJobTransactionStatus(UpdatedJobTransactionStatusRequest) returns (UpdatedJobTransactionStatusResponse) {}

}